--- a/src/scala/com/gitshed/BUILD
+++ b/src/scala/com/gitshed/BUILD
@@ -1,6 +1,10 @@
 
-scala_library(name='history-rewriter',
+scala_library(name='history-rewriter-lib',
               sources=globs('*.scala'),
               dependencies=[
                 '3rdparty/jvm:bfg'
               ])
+
+jvm_binary(name='history-rewriter',
+           main='com.gitshed.Main',
+           dependencies=[':history-rewriter-lib'])
